# srlog

./: Cargo.toml  README.md
src/: level.rs  lib.rs  logger.rs  time.rs
tests/: custom_template.rs  simple.rs
